# docs/swagger.json
@@ -621,12 +621,12 @@
                         "required": true
                     },
                     {
-                        "description": "{ \\",
+                        "description": "Request body",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/chat.SendMessageRequest"
                         }
                     }
                 ],
@@ -4893,6 +4893,18 @@
         }
     },
     "definitions": {
+        "chat.SendMessageRequest": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Halo, ada yang bisa kami bantu?"
+                }
+            }
+        },
         "customer.CreateCustomerRequest": {
             "type": "object",
             "required": [
